updates on Flask

--- a/Flask_Deployment/index.html
+++ b/Flask_Deployment/index.html
@@ -84,19 +84,10 @@
 <br>
 <br>
 
-<div class="result" align="center">
-    {% if result %}
-        {% for variable, value in original_input.items() %}
-            <b>{{ variable }}</b> : {{ value }} <br>
-        {% endfor %}
-        <br>
-        <br> Predicted Water Functionality Outcome:
-           <p style="font-size:30px">{{ result }}</p>
-    {% endif %}
-</div>
-
 </body>
 </html>
 
+<!-- {{ prediction_text }}
+ -->
 
 
